# tinytickets

./: .gitignore  Dockerfile  README.md  TODO.md  docker-build-and-start.sh  remove_all_git_tags.sh
.github/workflows/: build.yml
backend/: .gitignore  Cargo.toml  Rocket.toml  generate_schema.sh  test_opened_tickets.sh  todo.md
backend/db/migrations/1.0.0/: down.sql  up.sql
backend/src/: config.rs  errors.rs  fairings.rs  lib.rs  mail.rs  main.rs  models.rs  tests.rs
backend/src/models/: asset.rs  comment.rs  db.rs  mod.rs  schema.rs  ticket.rs
backend/templates/: closed_ticket_body.hbs  closed_ticket_subject.hbs  new_comment_body.hbs  new_comment_subject.hbs  new_ticket_body.hbs  new_ticket_subject.hbs  open_tickets_body.hbs  open_tickets_subject.hbs  tickets_with_comments_body.hbs  tickets_with_comments_subject.hbs
backend/tests/endtoend/: main.rs
backend/web/: index.html
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/tinytickets/: MainActivity.kt
frontend/android/app/src/main/kotlin/fr/ninico/tinytickets/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: globals.dart  i18n.dart  main.dart
frontend/lib/components/: delete_dialog.dart  new_asset.dart  new_comment.dart  new_ticket.dart  settings.dart  tickets.dart
frontend/lib/export/: export_android.dart  export_web.dart
frontend/lib/models/: asset.dart  comment.dart  crud.dart  mock_api.dart  ticket.dart
frontend/test/: models_test.dart  ui_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
