[package]
name = "tinytickets_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tinytickets_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.2.11", features = ["chrono", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.2.0"
handlebars = { version = "6.3.2", features = ["dir_source"] }
http = "1.3.1"
image = "0.25.6"
lettre = "0.11.17"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_trim = "1.1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", default-features = false, features = ["io"] }
tower-http = { version = "0.6.6", default-features = false, features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
reqwest = { version = "0.12.20", default-features = false, features = ["cookies", "json", "stream"] }
