[package]
name = "tinytickets_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tinytickets_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.4", features = ["chrono", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.3.1"
handlebars = { version = "6.3.2", features = ["dir_source"] }
http = "1.4.0"
image = "0.25.9"
lettre = "0.11.19"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_trim = "1.1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", default-features = false, features = ["io"] }
tower-http = { version = "0.6.8", default-features = false, features = ["cors", "fs"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
reqwest = { version = "0.12.25", default-features = false, features = ["cookies", "json", "stream"] }
